{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 562,
  "lineage": "7245cbed-a522-4217-d223-b379d9b574e1",
  "resources": [
    {
      "module": "module.aws_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main_test_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e136e904f3da870",
            "arn": "arn:aws:ec2:us-east-1:832468941035:instance/i-016ebd41e85fc3170",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-016ebd41e85fc3170",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main_test_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-088d4a24a14a4d33a"
              }
            ],
            "primary_network_interface_id": "eni-088d4a24a14a4d33a",
            "private_dns": "ip-172-16-0-251.ec2.internal",
            "private_ip": "172.16.0.251",
            "public_dns": "ec2-54-236-60-197.compute-1.amazonaws.com",
            "public_ip": "54.236.60.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0af8ee48d54e9195f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0837c2ff627ec285c",
            "tags": {
              "Name": "main_test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0104d059f1a3d971f"
            ]
          },
          "dependencies": [
            "module.aws_key_pair.aws_key_pair.main_test_key_pair",
            "module.aws_network_interface.aws_network_interface.main_test_network_interface",
            "module.aws_security_group.aws_security_group.main_test_security_group",
            "module.aws_subnet.aws_subnet.main_test_subnet",
            "module.aws_vpc.aws_vpc.main_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_instance_openshift_masters",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_openshift_masters",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e136e904f3da870",
            "arn": "arn:aws:ec2:us-east-1:832468941035:instance/i-0d85392a567212143",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d85392a567212143",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main_test_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0b4bc275b39c224b1"
              }
            ],
            "primary_network_interface_id": "eni-0b4bc275b39c224b1",
            "private_dns": "ip-172-16-0-216.ec2.internal",
            "private_ip": "172.16.0.216",
            "public_dns": "ec2-18-204-44-169.compute-1.amazonaws.com",
            "public_ip": "18.204.44.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b2468ba6fb602aa3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0837c2ff627ec285c",
            "tags": {
              "Name": "main_test_master-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0104d059f1a3d971f"
            ]
          },
          "dependencies": [
            "module.aws_key_pair.aws_key_pair.main_test_key_pair",
            "module.aws_network_interface_masters.aws_network_interface.main_test_network_interface_for_masters",
            "module.aws_security_group.aws_security_group.main_test_security_group",
            "module.aws_subnet.aws_subnet.main_test_subnet",
            "module.aws_vpc.aws_vpc.main_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_instance_openshift_slaves",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_openshift_slaves",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aeeebd8d2ab47354",
            "arn": "arn:aws:ec2:us-east-1:832468941035:instance/i-0fdc16515e24435f5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fdc16515e24435f5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main_test_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-014ade430c2c7a169"
              }
            ],
            "primary_network_interface_id": "eni-014ade430c2c7a169",
            "private_dns": "ip-172-16-0-52.ec2.internal",
            "private_ip": "172.16.0.52",
            "public_dns": "ec2-35-173-1-125.compute-1.amazonaws.com",
            "public_ip": "35.173.1.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fed67ab4d371b103",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0837c2ff627ec285c",
            "tags": {
              "Name": "main_test_slave-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0104d059f1a3d971f"
            ]
          },
          "dependencies": [
            "module.aws_key_pair.aws_key_pair.main_test_key_pair",
            "module.aws_network_interface_slaves.aws_network_interface.main_test_network_interface_for_slaves",
            "module.aws_security_group.aws_security_group.main_test_security_group",
            "module.aws_subnet.aws_subnet.main_test_subnet",
            "module.aws_vpc.aws_vpc.main_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_test_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:832468941035:internet-gateway/igw-0b6abae278953d978",
            "id": "igw-0b6abae278953d978",
            "owner_id": "832468941035",
            "tags": {
              "Name": "main_test"
            },
            "vpc_id": "vpc-05b843ec03ea498ff"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_main_route_table_association",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_test_main_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4279221b335a06e",
            "original_route_table_id": "rtb-0c2af1e30957a49fc",
            "route_table_id": "rtb-033f86a2a186aeab0",
            "vpc_id": "vpc-05b843ec03ea498ff"
          },
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.main_test_internet_gateway",
            "module.aws_route_table.aws_route_table.main_test_route_table",
            "module.aws_vpc.aws_vpc.main_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network_interface",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_test_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-088d4a24a14a4d33a",
            "ipv6_address_count": 0,
            "mac_address": "02:79:8a:eb:07:37",
            "private_dns_name": "ip-172-16-0-251.ec2.internal",
            "private_ip": "172.16.0.251",
            "private_ips": [
              "172.16.0.251"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0104d059f1a3d971f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0837c2ff627ec285c",
            "tags": {
              "Name": "main_test"
            }
          },
          "dependencies": [
            "module.aws_security_group.aws_security_group.main_test_security_group",
            "module.aws_subnet.aws_subnet.main_test_subnet",
            "module.aws_vpc.aws_vpc.main_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network_interface_masters",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_test_network_interface_for_masters",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-0b4bc275b39c224b1",
            "ipv6_address_count": 0,
            "mac_address": "02:8b:70:e9:d0:83",
            "private_dns_name": "ip-172-16-0-216.ec2.internal",
            "private_ip": "172.16.0.216",
            "private_ips": [
              "172.16.0.216"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0104d059f1a3d971f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0837c2ff627ec285c",
            "tags": {
              "Name": "main_test_master-1"
            }
          },
          "dependencies": [
            "module.aws_security_group.aws_security_group.main_test_security_group",
            "module.aws_subnet.aws_subnet.main_test_subnet",
            "module.aws_vpc.aws_vpc.main_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network_interface_slaves",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_test_network_interface_for_slaves",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-014ade430c2c7a169",
            "ipv6_address_count": 0,
            "mac_address": "02:27:10:d1:57:fd",
            "private_dns_name": "ip-172-16-0-52.ec2.internal",
            "private_ip": "172.16.0.52",
            "private_ips": [
              "172.16.0.52"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0104d059f1a3d971f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0837c2ff627ec285c",
            "tags": {
              "Name": "main_test_slave-1"
            }
          },
          "dependencies": [
            "module.aws_security_group.aws_security_group.main_test_security_group",
            "module.aws_subnet.aws_subnet.main_test_subnet",
            "module.aws_vpc.aws_vpc.main_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_test_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:832468941035:route-table/rtb-033f86a2a186aeab0",
            "id": "rtb-033f86a2a186aeab0",
            "owner_id": "832468941035",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b6abae278953d978",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main_test"
            },
            "vpc_id": "vpc-05b843ec03ea498ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.main_test_internet_gateway",
            "module.aws_vpc.aws_vpc.main_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_test_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:832468941035:security-group/sg-0104d059f1a3d971f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0104d059f1a3d971f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "832468941035",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main_test"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b843ec03ea498ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_test_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:832468941035:subnet/subnet-0837c2ff627ec285c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.0.0/24",
            "id": "subnet-0837c2ff627ec285c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "832468941035",
            "tags": {
              "Name": "main_test"
            },
            "tags_all": {
              "Name": "main_test"
            },
            "vpc_id": "vpc-05b843ec03ea498ff"
          },
          "dependencies": [
            "data.aws_availability_zones.zones",
            "module.aws_vpc.aws_vpc.main_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:832468941035:vpc/vpc-05b843ec03ea498ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/22",
            "default_network_acl_id": "acl-06f8b0e7f3c7ccb9b",
            "default_route_table_id": "rtb-033f86a2a186aeab0",
            "default_security_group_id": "sg-058c36eb45b2e1a99",
            "dhcp_options_id": "dopt-046578945c28d44ba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05b843ec03ea498ff",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-033f86a2a186aeab0",
            "owner_id": "832468941035",
            "tags": {
              "Name": "main_test"
            },
            "tags_all": {
              "Name": "main_test"
            }
          }
        }
      ]
    }
  ]
}